[package]
name = "win32api"
version = "0.1.0"
edition = "2021"


[dependencies]
winapi = {version="0.3.9", features=["winuser","errhandlingapi","libloaderapi","fileapi","winbase","processthreadsapi","handleapi","wincrypt"]}
windows = {version ="0.58.0",features=["Win32_Foundation","Win32_System_Threading","Win32_Storage_FileSystem"]}
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde_json = "1.0.128"
rsa = "0.9.6"
base64 = "0.22.1"
bytes = "1.7.2"
warp = "0.3.7"
colored = "2.1.0"
prettytable = "0.10.0"
once_cell = "1.20.2"
hex = "0.4.3"


